# cpp11-headers-template

./: README.md  bootstrap
.bootstrap-org/: .gitignore  .hgignore  AUTHORS  COPYING  Makefile.am  NEWS  README  README.md  configure.ac  generatesource  init-autotools  package.pc.in
.bootstrap-org/examples/: Makefile.am
.bootstrap-org/sourcetemplates/: header.hpp  source.cpp  testheader.hpp  testsource.cpp
.bootstrap-org/src/: Main.cpp  Makefile.am
.bootstrap-org/test/: Main.cpp  Makefile.am
