AM_CFLAGS=-Wall
bin_PROGRAMS=

noinst_PROGRAMS=
LDADD=$(UNITTESTCPP_LIBS)
AM_CXXFLAGS=-I$(top_srcdir)/include $(UNITTESTCPP_CFLAGS) -Wall
 
noinst_PROGRAMS += testsuite
testsuite_SOURCES = Main.cpp
# __AUTO_ADD_SOURCES_HERE__
# Do not remove or move previous line as it will break the
# automatic adding of source files.
